VPC_Example.yaml
AWSTemplateFormatVersion: "2010-09-09"


Description: "Creates infra for bit-byte-box"
Parameters: 
  VPCName:
    Description: "Name for VPC that is being created"
    Type: String
    Default: "thebitbyteboxVPC"
  Region:
    Description: "Region where VPC needs to be created"
    Type: String
    Default : "ap-south-1"
    AllowedValues:
      - ap-south-1
      - us-east-1
  Owner:
    Description: "Owner of VPC"
    Type: String
    Default: "thebitbytebox"

    

Mappings:
  SubnetConfiguration:
    VPC:
      CIDR: "10.0.0.0/16"
    Public1:
      CIDR: "10.0.1.0/24"
    Public2:
      CIDR: "10.0.2.0/24"
    Private1:
      CIDR: "10.0.16.0/20"
    Private2:
      CIDR: "10.0.32.0/20"
  AZRegions:
    ap-south-1:
      AZs: ["a", "b"]
    us-east-1:
      AZs: ["a", "b"]




Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock: !FindInMap [ "SubnetConfiguration", "VPC", "CIDR" ]
      Tags:
        - 
          Key: "Owner"
          Value: !Ref Owner
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        - 
          Key: "Name"
          Value: !Ref "VPCName"
  
  
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      AvailabilityZone: !Join 
        - ""
        - - !Ref "Region"
          - Fn::Sub: 
            - "${AZ}"
            - AZ: !Select [0, !FindInMap ["AZRegions", !Ref "Region", "AZs"]]
      CidrBlock: !FindInMap ["SubnetConfiguration", "Public1", "CIDR"]
      MapPublicIpOnLaunch: "true"
      Tags:
        - 
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        - 
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-public-"
              - !Select [0, !FindInMap ["AZRegions", !Ref "Region", "AZs"]]
  
  

  PublicSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      AvailabilityZone: !Join
        - ""
        - - !Ref "Region"
          - !Select [1, !FindInMap ["AZRegions", !Ref "Region",  AZs] ]
      CidrBlock: !FindInMap ["SubnetConfiguration", "Public2", CIDR]
      MapPublicIpOnLaunch: "true"
      Tags:
        - 
          Key: "Owner"
          Value:  !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        - 
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-public-"
              - !Select [1, !FindInMap ["AZRegions", !Ref "Region", "AZs"]]
  
  
  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      AvailabilityZone: !Join
        - ""
        - - !Ref "Region"
          - !Select [0, !FindInMap ["AZRegions", !Ref "Region", "AZs"] ]
      CidrBlock: !FindInMap ["SubnetConfiguration", "Private1", "CIDR"]
      Tags:
        - 
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        -
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-private-"
              - !Select [0, !FindInMap [ "AZRegions", !Ref "Region", "AZs"] ]
  
  
  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      AvailabilityZone: !Join
        - ""
        - - !Ref "Region"
          - !Select [1, !FindInMap [ "AZRegions", !Ref "Region", "AZs"]]
      CidrBlock: !FindInMap ["SubnetConfiguration", "Private2", "CIDR"]
      Tags:
        - 
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        -
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-private-"
              - !Select [1, !FindInMap [ "AZRegions", !Ref "Region", "AZs"] ]

      
  MyInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - 
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        - 
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref VPCName
              - "-IGW"
  
  
  MyInternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref "VPC"
      InternetGatewayId: !Ref "MyInternetGateway"

  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        -
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        -
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-public-route-table"
  
  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: "MyInternetGatewayAttachment"
    Properties:
      RouteTableId: !Ref "PublicRouteTable"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "MyInternetGateway"

  PublicRouteSubnetAssoForSubnet1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref "PublicSubnet1"
      RouteTableId: !Ref "PublicRouteTable"

  PublicRouteSubnetAssoForSubnet2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref "PublicSubnet2"
      RouteTableId: !Ref "PublicRouteTable"
  

  
  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        -
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        -
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-public-nacl"
  

  InboundPublicNetworkACLEntryHttp:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: "100"
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "80"
        To: "80"
  
  InboundPublicNetworkACLEntryHttps:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: "200"
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "443"
        To: "443"
  

  OutboundPublicNetworkAclEntryHttp:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: "100"
      Protocol: "6"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "80"
        To: "80"


  OutboundPublicNetworkAclEntryHttps:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: "200"
      Protocol: "6"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "443"
        To: "443"


  OutboundPublicNetworkAclEntryEphemeral:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: "300"
      Protocol: "6"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "32768"
        To: "65535"


  PublicSubnetNetworkAclAssociation1:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref "PublicSubnet1"
      NetworkAclId: !Ref "PublicNetworkAcl"


  PublicSubnetNetworkAclAssociation2:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref "PublicSubnet2"
      NetworkAclId: !Ref "PublicNetworkAcl"

  ElasticIP1:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"
  

  NATGateway1:
    Type: "AWS::EC2::NatGateway"
    Properties: 
      AllocationId: !GetAtt "ElasticIP1.AllocationId"
      SubnetId: !Ref "PublicSubnet1"

  ElasticIP2:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

  NATGateway2:
    Type: "AWS::EC2::NatGateway"
    Properties: 
      AllocationId: !GetAtt "ElasticIP2.AllocationId"
      SubnetId: !Ref "PublicSubnet2"


  PrivateRouteTable1:
    Type: "AWS::EC2::Route"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        -
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        -
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-private-route-table-1"

  PrivateRouteToInternet1:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref "PrivateRouteTable1"
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref "NATGateway1"


  PrivateRouteTable2:
    Type: "AWS::EC2::Route"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        -
          Key: "Owner"
          Value: !Ref "Owner"
        - 
          Key: "Application"
          Value: !Ref "AWS::StackName"
        -
          Key: "Name"
          Value: !Join
            - ""
            - - !Ref "VPCName"
              - "-private-route-table-2"


  PrivateRouteToInternet2:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId:
        Ref: "PrivateRouteTable2"
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId:
        Ref: "NATGateway2"        


  PrivateSubnetRouteTableAsso1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnet1"
      RouteTableId: !Ref "PrivateRouteTable1"

  PrivateSubnetRouteTableAsso2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref "PrivateSubnet2"
      RouteTableId: !Ref "PrivateRouteTable2"

Outputs:

  VPCId:
    Description: "VPCId"
    Value: !Ref "VPC"
    Export:
      Name: !Join
        - ""
        - - !Ref "Region"
          - !Sub "-${AWS::StackName}-VPC"
  
  PublicSubnet1:
    Description: "Public Subnet 1"
    Value: !Ref "PublicSubnet1"
    Export:
      Name: !Join
        - ""
        - - !Ref "Region"
          - !Sub "-${AWS::StackName}-PublicSubnet1"

  PublicSubnet2:
    Description: "Public Subnet 2"
    Value: !Ref "PublicSubnet2"
    Export:
      Name: !Join
        - ""
        - - !Ref "Region"
          - !Sub "-${AWS::StackName}-PublicSubnet2"

  PrivateSubnet1:
    Description: "Private Subnet 1"
    Value: !Ref "PrivateSubnet1"
    Export:
      Name: !Join
        - ""
        - - !Ref "Region"
          - !Sub "-${AWS::StackName}-PrivateSubnet1"

  PrivateSubnet2:
    Description: "Private Subnet 2"
    Value: !Ref "PrivateSubnet2"
    Export:
      Name: !Join
        - ""
        - - !Ref "Region"
          - !Sub "-${AWS::StackName}-PrivateSubnet2"
